[tool.poetry]
name = "fixie-alexa-skill"
version = "0.1.0"
description = "An Alexa skill that talks to Fixie."
authors = ["Matt Welsh <matt@fixie.ai>"]
packages = [{include = "fixieskill"}]

[tool.poetry.dependencies]
python = "^3.9"
fixieai = "^0.2.15"
Flask = "^2.2.3"
gunicorn = "^20.1.0"
ask-sdk-core = "^1.10.2"
ask-sdk-webservice-support = "^1.3.3"
flask-ask-sdk = "^1.0.0"
requests = "^2.29.0"

[tool.poetry.dev-dependencies]
black = "22.8.0"
isort = "5.10.1"
mypy = "^0.991"
autoflake = "^1.6.1"
pytest = "^7.1.3"
requests-mock = "^1.10.0"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
