[tool.poetry]
name = "fixie-slackbot"
version = "0.1.0"
description = "A Slack bot that talks to Fixie."
authors = ["Matt Welsh <matt@fixie.ai>"]
packages = [{include = "slackbot"}]

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.17.0"
slack-sdk = "^3.21.0"
fixieai = "^0.2.15"

[tool.poetry.dev-dependencies]
black = "22.8.0"
isort = "5.10.1"
mypy = "^0.991"
autoflake = "^1.6.1"
pytest = "^7.1.3"
requests-mock = "^1.10.0"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
